# system-status

./: .gitignore  CMakeLists.txt  README.md  SystemStatusWidget.cpp  SystemStatusWidget.h  system-status.json
.github/workflows/: ci.yml
